# LMVM

./: CMakeLists.txt  LICENSE  README.md
include/: version.h
ir/: ir_generator.cpp  ir_generator.h  ir_token.cpp  ir_token.h  main.cpp
test/: fib.lmi  hello.lmi  test.lmi
vm/: heap.cpp  heap.h  main.cpp  vm.cpp  vm.h
vm/call/: handler.cpp  handler.h
vm/error/: error.h
vm/models/: CallNative.cpp  CallNative.h  Float.cpp  Float.h  Integer.cpp  Integer.h  Object.cpp  Object.h  String.cpp  String.h  models.h
vm/op/: Loader.cpp  Loader.h  OpCode.cpp  OpCode.h
